...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/container_message"
            visibleMessage="@{vm.eventLiveData}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/failed_load" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:resourceItems="@{vm.eventLiveData}" />
    </LinearLayout>

...
